--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@
 #   "urxvt -e bash -c 'tmux attach -d -t mysession'"
 #     m:0x50 + c:39
 
+set-option -g default-shell /bin/bash
 
 # set prefix key to ctrl+a until I have time to adapt
 unbind C-b
